test/end-to-end/compile-errors/function-pointer-not-supported.crow
main void()
	f void function() = &foo
	g void function() = &goo
	h void function() = &(1 + 1)

hoo[t] spec
	hoo void(a t)

use-spec[t] void(x t) t hoo
	f void function(x t) = &hoo
	f[x]

foo void()
	()
foo string()
	()

goo[t] void()
	()
